--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "@angular/platform-browser": "^14.1.0",
     "@angular/platform-browser-dynamic": "^14.1.0",
     "@angular/router": "^14.1.0",
+    "@microsoft/tsdoc": "^0.14.2",
+    "@swimlane/ngx-charts": "^20.4.1",
+    "d3": "^7.8.5",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -26,6 +29,10 @@
     "@angular-devkit/build-angular": "^14.1.3",
     "@angular/cli": "~14.1.3",
     "@angular/compiler-cli": "^14.1.0",
+    "@types/d3": "^7.4.1",
+    "@types/d3-scale": "^4.0.5",
+    "@types/d3-selection": "^3.0.7",
+    "@types/d3-shape": "^3.1.3",
     "@types/jasmine": "~4.0.0",
     "jasmine-core": "~4.2.0",
     "karma": "~6.4.0",
